split python scripts, added pyqt6 to py dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "matplotlib>=3.10.6",
     "multipers>=2.3.4",
+    "pyqt6>=6.9.1",
     "shapely>=2.1.1",
     "tadasets>=0.2.1",
 ]
